Add some features

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <p class="-mt-4 text-xs">The Shoe Company</p>
       </a>
       <nav
-        id="nav"
+        id="navbar"
         class="flex hidden space-x-10 lg:text-2xl text-[16px] font-bold md:block nav-show:mt-[92px] nav-show:w-[40%] nav-show:flex nav-show:flex-col nav-show:fixed nav-show:top-0 nav-show:right-0 nav-show:h-[20vh] nav-show:bg-[rgba(57,57,57,.6)]"
       >
         <a id="home" class="home:ml-10" href="#home">Home</a>
